--- a/docs/style.css
+++ b/docs/style.css
@@ -221,6 +221,11 @@ body {
     flex-direction: column;
   }
 
+  .top-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .sidebar {
     width: 100%;
     flex-direction: row;
