--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
       <h1>Henry</h1>
       <nav>
         <ul>
-          <li><a href="/index.html">CV</a></li>
-          <li><a href="/pages/projects.html">Projects</a></li>
+          <li><a href="{{ site.baseurl }}/index.html">CV</a></li>
+          <li><a href="{{ site.baseurl }}/pages/projects.html">Projects</a></li>
           <p class="active">{{ page.title }}</p>
         </ul>
       </nav>
