--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/style.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/project-page-style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +19,8 @@
       </nav>
     </aside>
     <main class="content">
+      <p class="emphasized">{{ page.project_date }}</p>
+
       <div class="project-page">
         {{ content }}
       </div>
