Properly setting up projects page. Adding projects

--- a/_layouts/project-list.html
+++ b/_layouts/project-list.html
@@ -5,19 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects - Henrique Boldrin</title>
   <link rel="stylesheet" href="../assets/styles/projects-style.css" />
+  <link rel="stylesheet" href="../assets/styles/sidebar-style.css" />
 </head>
 <body>
   <div class="layout">
     <aside class="sidebar">
-      <h1>Henry</h1>
-      <nav>
-        <div id="visit-count" class="visit-count">Loading visits...</div>
-        <ul>
-          <li><a href="../index.html">CV</a></li>
-          <li><a href="projects.html" class="active">Projects</a></li>
-        </ul>
-      </nav>
-    </aside>
+      {% include sidebar.html %}
+      </aside>
 
     <main class="content">
       <h2 class="page-title">My Projects</h2>
