--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -4,19 +4,14 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/project-page-style.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/sidebar-style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="layout">
     <aside class="sidebar">
-      <h1>Henry</h1>
-      <nav>
-        <ul>
-          <li><a href="{{ site.baseurl }}/index.html">CV</a></li>
-          <li><a href="{{ site.baseurl }}/pages/projects.html">Projects</a></li>
-          <p class="active">{{ page.title }}</p>
-        </ul>
-      </nav>
+      {% include sidebar.html %}
+
     </aside>
     <main class="content">
       <p class="emphasized">{{ page.project_date }}</p>
