--- a/_layouts/project-list.html
+++ b/_layouts/project-list.html
@@ -10,6 +10,16 @@
     })(window, document, "clarity", "script", "rxcbrrvyir");
   </script> 
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPEW4VK3GX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GPEW4VK3GX');
+  </script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects - Henrique Boldrin</title>
