--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -8,7 +8,18 @@
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "rxcbrrvyir");
-</script> 
+  </script> 
+
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GPEW4VK3GX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GPEW4VK3GX');
+</script>
 
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
